--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Lakshay Pandey</h1>
-      <h2 class="project-tagline">Personal Web Page for lakshaypandey</h2>
+      <h2 class="project-tagline">"All who wander are not lost" - The Lord of the Rings</h2>
     </section>
 
     <section class="main-content">
@@ -55,7 +55,6 @@ $ git checkout gh-pages
 
     </section>
 
-  
+
   </body>
 </html>
-
