--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h3>
 
-<p>Currently Managing Mobile Products at <a href="http://www.jabong.com">Jabong.com</a> Ex <a href="http://www.paytm.com">@Paytm</a> <a href="http://www.zomato.com">@Zomato</a> </p>
+<p>Currently Managing Mobile Products <a href="http://www.jabong.com">@Jabong.com</a>. Ex <a href="http://www.paytm.com">@Paytm</a> <a href="http://www.zomato.com">@Zomato</a> </p>
 <p>Computer Science Grad from <a href="http://www.iiitd.ac.in">IIIT-Delhi</a></p>
 <p>Resume available <a href="https://onedrive.live.com/redir?resid=EC21D9A4251E051!16573&authkey=!AKRoaHMoosW0Y3E&ithint=file%2cpdf">here</a></p>
 
