make hello world, fix quote header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ experience with design and development of Ad Networks, Payment Systems, E-commer
 Fashion websites, DWH/DWA systems, Mobile applications and API platforms. Looking to work on new age products
 that use technology to solve problems.</p>
 
-<p>If any of that ^^ sounds remotely interesting, drop me a line on any of the mediums below.
+<p>If any of that ^^ sounds remotely interesting, drop me a line on any of the mediums on the header.
 
 
   </article>
