--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@ title: Home
 <p>I am interested in developing products that solve problems for customers using new age technology. I have had
 experience with design and development of Ad Networks, Payment Systems, E-commerce/M-commerce websites,
 Fashion websites, DWH/DWA systems, Mobile applications and API platforms. Looking to work on new age products
-that use technology to solve problems.
-If you would like to connect with me , I am available on</p>
+that use technology to solve problems.</p>
 
 
 </div>
