Fix home text + Change photo

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@ title: Home
 
 <div class="page">
 
-<p>Currently managing mobile products <a href="https://www.jabong.com">@Jabong</a>. Ex <a href="https://www.paytm.com">@Paytm</a> <a href="https://www.zomato.com">@Zomato</a>.</p>
+<p>Currently managing some exciting products <a href="http://www.eroslabs.co/">@ErosLabs</a>.</p>
 
-<p>Computer Science Grad from <a href="https://www.iiitd.ac.in">@IIIT-Delhi</a></p>
+<p>In a different time and age have worked <a href="https://www.jabong.com">@Jabong</a> <a href="https://www.paytm.com">@Paytm</a> and <a href="https://www.zomato.com">@Zomato</a>.</p>
 
-<p>I am interested in developing products that solve problems for customers using new age technology. I have had
+<p>Computer Science UnderGrad from <a href="https://www.iiitd.ac.in">@IIIT-Delhi</a></p>
+
+<p>Interested in developing products that solve problems for customers using new age technology. I have had
 experience with design and development of Ad Networks, Payment Systems, E-commerce/M-commerce websites,
-Fashion websites, DWH/DWA systems, Mobile applications and API platforms. Looking to work on new age products
-that use technology to solve problems.</p>
+Fashion websites, DWH/DWA systems,Content platforms, Mobile applications and API platforms.</p>
+
+<p> If any of this sounds interesting, then lets <a href="/contact">get in touch</a>.</p>
 
 
 </div>
