--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ title: Home
 
 <div class="page">
 
-<p>Currently managing some exciting products <a href="http://www.eroslabs.co/">@ErosLabs</a>.</p>
+<p>Currently a PM at <a href="https://hike.in/">@HikeApp</a>.</p>
 
-<p>In a different time and age have worked <a href="https://www.jabong.com">@Jabong</a> <a href="https://www.paytm.com">@Paytm</a> and <a href="https://www.zomato.com">@Zomato</a>.</p>
+<p>In a different time and age have worked on  <a https://inc42.com/buzz/times-internet-house-of-god-spiritual/">@HouseofGodApp</a>.</p>
+ <a href="https://www.jabong.com">@Jabong</a> <a href="https://www.paytm.com">@Paytm</a> and <a href="https://www.zomato.com">@Zomato</a>.</p>
 
 <p>Computer Science UnderGrad from <a href="https://www.iiitd.ac.in">@IIIT-Delhi</a></p>
 
