--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ title: Home
 
 <p>Currently a PM at <a href="https://hike.in/">@HikeApp</a>.</p>
 
-<p>In a different time and age have worked on  <a https://inc42.com/buzz/times-internet-house-of-god-spiritual/">@HouseofGodApp</a>.</p>
- <a href="https://www.jabong.com">@Jabong</a> <a href="https://www.paytm.com">@Paytm</a> and <a href="https://www.zomato.com">@Zomato</a>.</p>
+<p>In a different time and age have worked on  <a https://inc42.com/buzz/times-internet-house-of-god-spiritual/">@HouseofGodApp</a> , <a href="https://www.jabong.com">@Jabong</a> , <a href="https://www.paytm.com">@Paytm</a> and <a href="https://www.zomato.com">@Zomato</a>.</p>
 
 <p>Computer Science UnderGrad from <a href="https://www.iiitd.ac.in">@IIIT-Delhi</a></p>
 
